--- a/css/logo.css
+++ b/css/logo.css
@@ -1,7 +1,7 @@
 .logo-wrapper .brand {
   width: 200px;
   height: 200px;
-  position: absolute;
+  position: relative;
   margin: 0 auto;
 }
 
@@ -18,6 +18,7 @@
   height: 200px;
   margin: 0 auto;
   position: absolute;
+  left: 0;
   z-index: 99999 !important;
 }
 
