--- a/css/demo.css
+++ b/css/demo.css
@@ -40,130 +40,6 @@ a:focus {
 	color: var(--link-text-hover);
 }
 
-.hidden {
-	position: absolute;
-	overflow: hidden;
-	width: 0;
-	height: 0;
-	pointer-events: none;
-}
-
-/* Icons */
-.icon {
-	display: block;
-	width: 1.5em;
-	height: 1.5em;
-	margin: 0 auto;
-	fill: currentColor;
-}
-
-@keyframes loaderAnim {
-	0% {
-		transform: scale3d(0,1,1);
-		transform-origin: 0% 50%;
-	}
-	50% {
-		transform: scale3d(1,1,1);
-		transform-origin: 0% 50%;
-	}
-	51% {
-		transform: scale3d(1,1,1);
-		transform-origin: 100% 50%;
-	}
-	100% {
-		transform: scale3d(0,1,1);
-		transform-origin: 100% 50%;
-	}
-}
-
-/* Frame */
-.frame {
-	top: 0;
-	left: 0;
-	position: fixed;
-	display: grid;
-	width: 100%;
-	height: 100vh;
-	z-index: 100;
-	pointer-events: none;
-	padding: 2em;
-	grid-template-columns: 50% 50%;
-	grid-template-rows: auto auto 4em;
-	grid-template-areas: 	"header header"
-							"... ..."
-							"... demos";
-}
-
-.frame a {
-	pointer-events: auto;
-}
-
-.message {
-	background: #333;
-	background: var(--body-text);
-	color: #ccd8e4;
-	color: var(--body-bg);
-	text-align: center;
-	padding: 1em;
-	display: none;
-}
-
-/* Header */
-.codrops-header {
-	position: relative;
-	display: flex;
-	flex-wrap: wrap;
-	align-items: center;
-	z-index: 100;
-	grid-area: header;
-	align-self: start;
-}
-
-.codrops-header__title {
-	font-size: 1em;
-	margin: 0;
-	font-weight: 400;
-}
-
-.github {
-	margin: 0 0 0 auto;
-}
-
-/* Top Navigation Style */
-.codrops-links {
-	position: relative;
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-	margin: 0 0.5em 0 0;
-	text-align: center;
-	white-space: nowrap;
-}
-
-.codrops-icon {
-	display: inline-block;
-	margin: 0 0.25em;
-	padding: 0 0.25em;
-}
-
-/* Demos */
-.demos {
-	grid-area: demos;
-	align-self: end;
-	justify-self: end;
-	display: block;
-	text-align: center;
-}
-
-.demo {
-	margin: 0 0 0 1em;
-}
-
-.demo--current {
-	color: #333;
-	color: var(--link-text-hover);
-}
-
 /* Grid */
 .grid {
 	display: grid;
@@ -177,14 +53,21 @@ a:focus {
 	pointer-events: none;
 }
 
-.js .grid {
+.grid {
 	position: absolute;
 	top: 3em;
 	left: 3em;
 	opacity: 0;
 }
 
-.js .grid--current {
+.grid__link {
+	color: #fff;
+	font-size: 200%;
+	text-align: center;
+	width: 100%;
+}
+
+.grid--current {
 	opacity: 1;
 	pointer-events: auto;
 }
@@ -334,30 +217,6 @@ a:focus {
 }
 
 @media screen and (max-width: 60em) {
-	.message {
-		display: block;
-	}
-	.frame {
-		display: block;
-		height: auto;
-		position: relative;
-		text-align: center;
-	}
-	.codrops-header {
-		flex-direction: column;
-	}
-	.codrops-header__title {
-		padding: 1em 0;
-	}
-	.github {
-		margin: 0 auto;
-	}
-	.demos {
-		padding: 1em 0 0;
-	}
-	.demo {
-		margin: 0 0.5em;
-	}
 	.grid {
 		height: auto;
 		top: auto !important;
