--- a/css/demo.css
+++ b/css/demo.css
@@ -40,6 +40,46 @@ a:focus {
 	color: var(--link-text-hover);
 }
 
+.modal {
+	display: none;
+	position: absolute;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	background: #fff;
+}
+
+.modal .modal-exit {
+	position: absolute;
+	cursor: pointer;
+	top: 10px;
+	right: 10px;
+	font-size: 2rem;
+	color: #fff;
+	z-index: 1;
+}
+
+.modal .modal-banner {
+	width: 100%;
+	height: 200px;
+	background: #333;
+	position: relative;
+}
+
+.modal .modal-banner .banner-title {
+	color: #fff;
+	font-size: 2rem;
+	text-transform: uppercase;
+	position: absolute;
+	bottom: 20px;
+	left: 20px;
+}
+
+.modal .modal-content {
+	padding: 20px 20px;
+}
+
 /* Grid */
 .grid {
 	display: grid;
@@ -78,7 +118,13 @@ a:focus {
 	background-repeat: no-repeat;
 	background-position: 50% 50%;
 	background-size: cover;
-	transition: transform 0.2s ease-out;
+	transition: all 0.2s ease-in-out;
+	transition: all 1s ease-in-out;
+}
+
+.grid__item.active {
+	width: 100%;
+	height: 100%;
 }
 
 .grid__item--name,
