--- a/css/index.css
+++ b/css/index.css
@@ -57,16 +57,17 @@ a:focus {
 
 .modal.active {
 	top: 0;
+	z-index: 4;
 }
 
 .modal .modal-exit-button {
-	position: absolute;
+	position: fixed;
 	cursor: pointer;
 	top: 10px;
 	right: 10px;
 	font-size: 2rem;
 	color: #fff;
-	z-index: 3;
+	z-index: 4;
 	opacity: 0;
 }
 
@@ -109,7 +110,8 @@ a:focus {
 }
 
 .modal .modal-content .modal-article img {
-	width: 400px;
+	width: 100%;
+	max-width: 400px;
 	height: 200px;
 	background-color: #ddd;
 }
@@ -160,14 +162,23 @@ a:focus {
 	background-position: 50% 50%;
 	background-size: cover;
 	transition: all 0.5s ease-in-out;
-
 	position: relative;
 	top: 0px;
 	left: 0px
 }
 
 .grid__item.active {
-	z-index: 2;
+	z-index: 1;
+}
+
+.grid__item img {
+	-webkit-filter: grayscale(100%);
+	filter: grayscale(100%);
+}
+
+.grid__item.active img {
+	-webkit-filter: none;
+	filter: none;
 }
 
 .grid__item--name,
@@ -280,8 +291,7 @@ a:focus {
 .grid--layout-2 .grid__item--nav-prev { grid-area: 9 / 5 / 14 / 10; }
 .grid--layout-2 .grid__item--nav-next { grid-area: 20 / 24 / 25 / 30; }
 
-/* Demo themes */
-.demo-2 {
+.container {
 	--gap: 10px;
     --body-text: #333;
     --body-bg: #c4f8de;
@@ -296,12 +306,12 @@ a:focus {
     --grid-text: #39c283;
 }
 
-.demo-2 .revealer--hideX,
-.demo-2 .revealer--hideY,
-.demo-2 .revealer--showX,
-.demo-2 .revealer--showY,
-.demo-2 .grid__item--animateOut,
-.demo-2 .grid__item--animateIn {
+.container .revealer--hideX,
+.container .revealer--hideY,
+.container .revealer--showX,
+.container .revealer--showY,
+.container .grid__item--animateOut,
+.container .grid__item--animateIn {
 	animation-duration: 0.6s;
 }
 
