--- a/css/index.css
+++ b/css/index.css
@@ -107,6 +107,7 @@ a:focus {
 .modal .modal-content .modal-article {
 	background: #fff;
 	padding: 20px 20px;
+	min-height: calc(100vh - 400px);
 }
 
 .modal .modal-content .modal-article img {
@@ -267,18 +268,48 @@ a:focus {
 	}
 }
 
-.grid .grid-item:first-child { grid-area: 12 / 1 / 24 / 5; background-image: url(../img/7.jpg); }
-.grid .grid-item:nth-child(2) { grid-area: 14 / 5 / 28 / 10; background-image: url(../img/11.jpg); }
-.grid .grid-item:nth-child(3) { grid-area: 1 / 10 / 26 / 15; background-image: url(../img/15.jpg); }
-.grid .grid-item:nth-child(4) { grid-area: 11 / 15 / 29 / 24; background-image: url(../grid/drone0.png); }
-.grid .grid-item:nth-child(5) { grid-area: 1 / 15 / 11 / 27; background-image: url(../grid/viz1.png); }
-.grid .grid-item:nth-child(6) { grid-area: 11 / 24 / 20	/ 30; background-image: url(../img/6.jpg); }
+.grid .grid-item:first-child {
+	grid-area: 12 / 1 / 24 / 5;
+	background-image: url(../img/7.jpg);
+}
+.grid .grid-item:nth-child(2) {
+	grid-area: 14 / 5 / 28 / 10;
+	background-image: url(../img/11.jpg);
+}
+.grid .grid-item:nth-child(3) {
+	grid-area: 1 / 10 / 26 / 15;
+	background-image: url(../img/15.jpg);
+}
+.grid .grid-item:nth-child(4) {
+	grid-area: 11 / 15 / 29 / 24;
+	background-image: url(../grid/drone0.png);
+}
+.grid .grid-item:nth-child(5) {
+	grid-area: 1 / 15 / 11 / 27;
+	background-image: url(../grid/viz1.png);
+}
+.grid .grid-item:nth-child(6) {
+	grid-area: 11 / 24 / 20	/ 30;
+	background-image: url(../img/6.jpg);
+}
 
-.grid .grid-item--name { grid-area: 16 / 9 / 30 / 16; }
-.grid .grid-item--title { grid-area: 1 / 27 / 11 / 29; }
-.grid .grid-item--text { grid-area: 1 / 5 / 9 / 10; align-items: flex-end; text-align: right;}
-.grid .grid-item--nav-prev { grid-area: 9 / 5 / 14 / 10; }
-.grid .grid-item--nav-next { grid-area: 20 / 24 / 25 / 30; }
+.grid .grid-item--name {
+	grid-area: 16 / 9 / 30 / 16;
+}
+.grid .grid-item--title {
+	grid-area: 1 / 27 / 11 / 29;
+}
+.grid .grid-item--text {
+	grid-area: 1 / 5 / 9 / 10;
+	align-items: flex-end;
+	text-align: right;
+}
+.grid .grid-item--nav-prev {
+	grid-area: 9 / 5 / 14 / 10;
+}
+.grid .grid-item--nav-next {
+	grid-area: 20 / 24 / 25 / 30;
+}
 
 .container {
 	--gap: 10px;
