--- a/styles/global.css
+++ b/styles/global.css
@@ -25,6 +25,8 @@ body {
 	color: var(--body-text);
 	background: #ccd8e4;
 	background: var(--body-bg);
+	overflow-y: scroll;
+  -webkit-overflow-scrolling: touch;
 }
 
 body.modal-open {
