--- a/styles/modal.css
+++ b/styles/modal.css
@@ -6,7 +6,8 @@
 	right: 0;
 	bottom: 0;
 	transition: top 0.5s ease-in-out;
-	overflow-y: auto;
+	overflow-y: scroll;
+  -webkit-overflow-scrolling: touch;
 }
 
 .modal.active {
