--- a/styles/grid.css
+++ b/styles/grid.css
@@ -65,6 +65,23 @@
 	filter: none;
 }
 
+.grid-item-img.active:before {
+	content: '';
+	position: absolute;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	left: 0;
+	opacity: .6;
+	background: rgb(76,76,76); /* Old browsers */
+	background: -moz-radial-gradient(center, ellipse cover, rgba(76,76,76,1) 0%, rgba(89,89,89,0) 0%, rgba(17,17,17,1) 100%); /* FF3.6+ */
+	background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%,rgba(76,76,76,1)), color-stop(0%,rgba(89,89,89,0)), color-stop(100%,rgba(17,17,17,1))); /* Chrome,Safari4+ */
+	background: -webkit-radial-gradient(center, ellipse cover, rgba(76,76,76,1) 0%,rgba(89,89,89,0) 0%,rgba(17,17,17,1) 100%); /* Chrome10+,Safari5.1+ */
+	background: -o-radial-gradient(center, ellipse cover, rgba(76,76,76,1) 0%,rgba(89,89,89,0) 0%,rgba(17,17,17,1) 100%); /* Opera 12+ */
+	background: -ms-radial-gradient(center, ellipse cover, rgba(76,76,76,1) 0%,rgba(89,89,89,0) 0%,rgba(17,17,17,1) 100%); /* IE10+ */
+	background: radial-gradient(ellipse at center, rgba(76,76,76,1) 0%,rgba(89,89,89,0) 0%,rgba(17,17,17,1) 100%);
+}
+
 .grid-item--name,
 .grid-item--title,
 .grid-item--text {
