--- a/styles/modal.css
+++ b/styles/modal.css
@@ -20,10 +20,13 @@
 	cursor: pointer;
 	top: 10px;
 	right: 10px;
-	font-size: 2rem;
-	color: #fff;
 	z-index: 4;
 	opacity: 0;
+}
+
+.modal .modal-exit-button svg {
+	height: 30px;
+	width: 30px;
 }
 
 .modal.active .modal-exit-button {
