--- a/styles/modal.css
+++ b/styles/modal.css
@@ -74,3 +74,13 @@
 	height: 200px;
 	background-color: #ddd;
 }
+
+.modal .modal-content .modal-article iframe {
+	max-width: 1150px;
+  width: 100%;
+  min-height: 650px;
+  border: 0;
+  display: block;
+  margin: 0 auto;
+  margin-bottom: 4px;
+}
