--- a/src/styles/grid.css
+++ b/src/styles/grid.css
@@ -1,217 +1,278 @@
-
 .grid {
-	display: grid;
-	width: calc(100% - 6em);
-	height: calc(100vh - 6em);
-	grid-auto-rows: calc((calc(100vh - 6em) / 30) - var(--gap));
-	grid-auto-columns: calc((calc(100% - 6em) / 30) - var(--gap));
-	justify-content: center;
-	align-content: center;
-	grid-gap: var(--gap);
-	pointer-events: none;
+  display: grid;
+  width: calc(100% - 6em);
+  height: calc(100vh - 6em);
+  grid-auto-rows: calc((calc(100vh - 6em) / 30) - var(--gap));
+  grid-auto-columns: calc((calc(100% - 6em) / 30) - var(--gap));
+  justify-content: center;
+  align-content: center;
+  grid-gap: var(--gap);
+  pointer-events: none;
 }
 
 .grid {
-	position: absolute;
-	top: 3em;
-	left: 3em;
-	opacity: 1;
-	pointer-events: auto;
+  position: absolute;
+  top: 3em;
+  left: 3em;
+  opacity: 1;
+  pointer-events: auto;
 }
 
 .grid__link {
-	color: #fff;
-	font-size: 2vw;
-	text-align: center;
-	white-space: pre-wrap;
-	width: 100%;
+  color: #fff;
+  font-size: 2vw;
+  text-align: center;
+  white-space: pre-wrap;
+  width: 100%;
 }
 
 @media screen and (max-width: 60em) {
-	.grid__link {
-		font-size: 14px;
-	}
+  .grid__link {
+    font-size: 14px;
+  }
 }
 
 .grid-item {
-	cursor: pointer;
-	padding: 1em;
-	background-repeat: no-repeat;
-	background-position: 50% 50%;
-	background-size: cover;
-	transition: all 0.5s ease-in-out;
-	position: relative;
-	top: 0px;
-	left: 0px
+  cursor: pointer;
+  padding: 1em;
+  background-repeat: no-repeat;
+  background-position: 50% 50%;
+  background-size: cover;
+  transition: all 0.5s ease-in-out;
+  position: relative;
+  top: 0px;
+  left: 0px;
 }
 
 .grid-item.active {
-	z-index: 1;
+  z-index: 1;
 }
 
 .grid-item-img {
-	background-color: #aaa;
-	-webkit-filter: grayscale(100%);
-	filter: grayscale(100%);
+  background-color: #aaa;
+  -webkit-filter: grayscale(100%);
+  filter: grayscale(100%);
 }
 
 .grid-item-img:hover {
-	-webkit-filter: none;
-	filter: none;
+  -webkit-filter: none;
+  filter: none;
 }
 
 .grid-item-img.active {
-	-webkit-filter: none;
-	filter: none;
+  -webkit-filter: none;
+  filter: none;
 }
 
 .grid-item-img.active:before {
-	content: '';
-	position: absolute;
-	top: 0;
-	right: 0;
-	bottom: 0;
-	left: 0;
-	opacity: .6;
-	background: rgb(76,76,76); /* Old browsers */
-	background: -moz-radial-gradient(center, ellipse cover, rgba(76,76,76,1) 0%, rgba(89,89,89,0) 0%, rgba(17,17,17,1) 100%); /* FF3.6+ */
-	background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%,rgba(76,76,76,1)), color-stop(0%,rgba(89,89,89,0)), color-stop(100%,rgba(17,17,17,1))); /* Chrome,Safari4+ */
-	background: -webkit-radial-gradient(center, ellipse cover, rgba(76,76,76,1) 0%,rgba(89,89,89,0) 0%,rgba(17,17,17,1) 100%); /* Chrome10+,Safari5.1+ */
-	background: -o-radial-gradient(center, ellipse cover, rgba(76,76,76,1) 0%,rgba(89,89,89,0) 0%,rgba(17,17,17,1) 100%); /* Opera 12+ */
-	background: -ms-radial-gradient(center, ellipse cover, rgba(76,76,76,1) 0%,rgba(89,89,89,0) 0%,rgba(17,17,17,1) 100%); /* IE10+ */
-	background: radial-gradient(ellipse at center, rgba(76,76,76,1) 0%,rgba(89,89,89,0) 0%,rgba(17,17,17,1) 100%);
+  content: '';
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  opacity: 0.6;
+  background: rgb(76, 76, 76); /* Old browsers */
+  background: -moz-radial-gradient(
+    center,
+    ellipse cover,
+    rgba(76, 76, 76, 1) 0%,
+    rgba(89, 89, 89, 0) 0%,
+    rgba(17, 17, 17, 1) 100%
+  ); /* FF3.6+ */
+  background: -webkit-gradient(
+    radial,
+    center center,
+    0px,
+    center center,
+    100%,
+    color-stop(0%, rgba(76, 76, 76, 1)),
+    color-stop(0%, rgba(89, 89, 89, 0)),
+    color-stop(100%, rgba(17, 17, 17, 1))
+  ); /* Chrome,Safari4+ */
+  background: -webkit-radial-gradient(
+    center,
+    ellipse cover,
+    rgba(76, 76, 76, 1) 0%,
+    rgba(89, 89, 89, 0) 0%,
+    rgba(17, 17, 17, 1) 100%
+  ); /* Chrome10+,Safari5.1+ */
+  background: -o-radial-gradient(
+    center,
+    ellipse cover,
+    rgba(76, 76, 76, 1) 0%,
+    rgba(89, 89, 89, 0) 0%,
+    rgba(17, 17, 17, 1) 100%
+  ); /* Opera 12+ */
+  background: -ms-radial-gradient(
+    center,
+    ellipse cover,
+    rgba(76, 76, 76, 1) 0%,
+    rgba(89, 89, 89, 0) 0%,
+    rgba(17, 17, 17, 1) 100%
+  ); /* IE10+ */
+  background: radial-gradient(
+    ellipse at center,
+    rgba(76, 76, 76, 1) 0%,
+    rgba(89, 89, 89, 0) 0%,
+    rgba(17, 17, 17, 1) 100%
+  );
 }
 
 .grid-item--name,
 .grid-item--title,
 .grid-item--text {
-	pointer-events: none;
-	padding: 0;
-	margin: 0;
+  pointer-events: none;
+  padding: 0;
+  margin: 0;
 }
 
 .grid-item--name,
 .grid-item--title {
-	text-transform: uppercase;
-	line-height: 0.8;
-	font-family: 'Kanit', sans-serif;
+  text-transform: uppercase;
+  line-height: 0.8;
+  font-family: 'Kanit', sans-serif;
 }
 
 .grid-item--name {
-	font-size: 7vw;
-	color: #ef3b3b;
-	color: var(--grid-name-text);
+  font-size: 7vw;
+  color: #ef3b3b;
+  color: var(--grid-name-text);
 }
 
 .grid-item--title {
-	font-size: 3.5vh;
-	text-transform: uppercase;
-	-webkit-writing-mode: vertical-lr;
-	writing-mode: vertical-lr;
-	text-align: right;
-	display: flex;
-	justify-content: flex-end;
-	color: #ef3b3b;
-	color: var(--grid-title-text);
+  font-size: 3.5vh;
+  text-transform: uppercase;
+  -webkit-writing-mode: vertical-lr;
+  writing-mode: vertical-lr;
+  text-align: right;
+  display: flex;
+  justify-content: flex-end;
+  color: #ef3b3b;
+  color: var(--grid-title-text);
 }
 
 .grid-item--text {
-	font-size: 0.85em;
-	line-height: 1.2;
-	display: flex;
-	color: inherit;
-	color: var(--grid-text);
+  font-size: 0.85em;
+  line-height: 1.2;
+  display: flex;
+  color: inherit;
+  color: var(--grid-text);
 }
 
 .grid-item--nav {
-	background: #442ef4;
-	background: var(--grid-nav-bg);
-	color: #fff;
-	color: var(--grid-nav-text);
-	display: flex;
-	align-items: center;
-	cursor: pointer;
+  background: #442ef4;
+  background: var(--grid-nav-bg);
+  color: #fff;
+  color: var(--grid-nav-text);
+  display: flex;
+  align-items: center;
+  cursor: pointer;
 }
 
 .grid-item--nav:hover {
-	background: #1f1f1f;
-	background: var(--grid-nav-bg-hover);
-	color: #fff;
-	color: var(--grid-nav-text-hover);
+  background: #1f1f1f;
+  background: var(--grid-nav-bg-hover);
+  color: #fff;
+  color: var(--grid-nav-text-hover);
 }
 
 .grid-item--nav-next .icon--nav-arrow {
-	margin: 0 0 0 auto;
+  margin: 0 0 0 auto;
 }
 
 .grid-item--nav-prev .icon--nav-arrow {
-	transform: rotate(180deg);
-	margin: 0;
+  transform: rotate(180deg);
+  margin: 0;
 }
 
 .grid-item--animateOut {
-	animation: animateOut 0.8s cubic-bezier(0.7,0,0.3,1) forwards;
+  animation: animateOut 0.8s cubic-bezier(0.7, 0, 0.3, 1) forwards;
 }
 
 .grid-item--animateIn {
-	animation: animateIn 0.8s cubic-bezier(0.7,0,0.3,1) forwards;
+  animation: animateIn 0.8s cubic-bezier(0.7, 0, 0.3, 1) forwards;
 }
 
-.grid .grid-item:first-child { grid-area: 12 / 1 / 24 / 5; }
+.grid .grid-item:first-child {
+  grid-area: 12 / 1 / 24 / 5;
+}
 /*.grid .grid-item.grid-item-full-preview:first-child { background-image: url(../img/7.jpg); }*/
-.grid .grid-item.grid-item-full-img:first-child { background-image: url(../img/7.jpg); }
+.grid .grid-item.grid-item-full-img:first-child {
+  background-image: url(../img/viz1.png);
+}
 
-.grid .grid-item:nth-child(2) { grid-area: 14 / 5 / 28 / 10; }
+.grid .grid-item:nth-child(2) {
+  grid-area: 14 / 5 / 28 / 10;
+}
 /*.grid .grid-item.grid-item-full-preview:nth-child(2) { background-image: url(../img/11.jpg); }*/
-.grid .grid-item.grid-item-full-img:nth-child(2) { background-image: url(../img/11.jpg); }
+.grid .grid-item.grid-item-full-img:nth-child(2) {
+  background-image: url(../img/starmaster0.png);
+}
 
-.grid .grid-item:nth-child(3) { grid-area: 1 / 10 / 26 / 15; }
+.grid .grid-item:nth-child(3) {
+  grid-area: 1 / 10 / 26 / 15;
+}
 /*.grid .grid-item.grid-item-full-preview:nth-child(3) { background-image: url(../img/15.jpg); }*/
-.grid .grid-item.grid-item-full-img:nth-child(3) { background-image: url(../img/15.jpg); }
+.grid .grid-item.grid-item-full-img:nth-child(3) {
+  background-image: url(../img/drone0.png);
+}
 
-.grid .grid-item:nth-child(4) { grid-area: 11 / 15 / 29 / 24; }
+.grid .grid-item:nth-child(4) {
+  grid-area: 11 / 15 / 29 / 24;
+}
 /*.grid .grid-item.grid-item-full-preview:nth-child(4) { background-image: url(../img/drone0.png); }*/
-.grid .grid-item.grid-item-full-img:nth-child(4) { background-image: url(../img/drone0.png); }
+.grid .grid-item.grid-item-full-img:nth-child(4) {
+  background-image: url(../img/drone0.png);
+}
 
-.grid .grid-item:nth-child(5) { grid-area: 1 / 15 / 11 / 27; }
+.grid .grid-item:nth-child(5) {
+  grid-area: 1 / 15 / 11 / 27;
+}
 /*.grid .grid-item.grid-item-full-preview:nth-child(5) { background-image: url(../img/viz1.png); }*/
-.grid .grid-item.grid-item-full-img:nth-child(5) { background-image: url(../img/starmaster0.png); }
+.grid .grid-item.grid-item-full-img:nth-child(5) {
+  background-image: url(../img/starmaster0.png);
+}
 
-.grid .grid-item:nth-child(6) { grid-area: 11 / 24 / 20	/ 30; }
+.grid .grid-item:nth-child(6) {
+  grid-area: 11 / 24 / 20 / 30;
+}
 /*.grid .grid-item.grid-item-full-preview:nth-child(6) { background-image: url(../img/6.jpg); }*/
-.grid .grid-item.grid-item-full-img:nth-child(6) { background-image: url(../img/viz1.png); }
+.grid .grid-item.grid-item-full-img:nth-child(6) {
+  background-image: url(../img/viz1.png);
+}
 
 .grid .grid-item--name {
-	grid-area: 16 / 9 / 30 / 16;
+  grid-area: 16 / 9 / 30 / 16;
 }
 .grid .grid-item--title {
-	grid-area: 1 / 27 / 11 / 29;
+  grid-area: 1 / 27 / 11 / 29;
 }
 .grid .grid-item--text {
-	grid-area: 1 / 5 / 9 / 10;
-	align-items: flex-end;
-	text-align: right;
+  grid-area: 1 / 5 / 9 / 10;
+  align-items: flex-end;
+  text-align: right;
 }
 .grid .grid-item--nav-prev {
-	grid-area: 9 / 5 / 14 / 10;
+  grid-area: 9 / 5 / 14 / 10;
 }
 .grid .grid-item--nav-next {
-	grid-area: 20 / 24 / 25 / 30;
+  grid-area: 20 / 24 / 25 / 30;
 }
 
 .container {
-	--gap: 10px;
-    --body-text: #333;
-    --body-bg: #c4f8de;
-    --link-text: #000000;
-    --link-text-hover: #727272;
-    --grid-name-text: #7ed72e;
-    --grid-title-text: #39c283;
-    --grid-nav-text: #000;
-    --grid-nav-bg: #39c283;
-    --grid-nav-text-hover: #ffffff;
-    --grid-nav-bg-hover: #000000;
-    --grid-text: #39c283;
+  --gap: 10px;
+  --body-text: #333;
+  --body-bg: #c4f8de;
+  --link-text: #000000;
+  --link-text-hover: #727272;
+  --grid-name-text: #7ed72e;
+  --grid-title-text: #39c283;
+  --grid-nav-text: #000;
+  --grid-nav-bg: #39c283;
+  --grid-nav-text-hover: #ffffff;
+  --grid-nav-bg-hover: #000000;
+  --grid-text: #39c283;
 }
 
 .container .revealer--hideX,
@@ -220,50 +281,50 @@
 .container .revealer--showY,
 .container .grid-item--animateOut,
 .container .grid-item--animateIn {
-	animation-duration: 0.6s;
+  animation-duration: 0.6s;
 }
 
 @media screen and (max-width: 60em) {
-	.grid {
-		height: auto;
-		top: auto !important;
-		width: 100%;
-		left: auto !important;
-		padding: 0 2em;
-		grid-template-columns: repeat(auto-fill, minmax(50px, 1fr));
-		grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-		grid-auto-rows: auto !important;
-		grid-auto-columns: auto !important;
-		grid-gap: 1vw;
-		margin: 0 0 5em;
-	}
+  .grid {
+    height: auto;
+    top: auto !important;
+    width: 100%;
+    left: auto !important;
+    padding: 0 2em;
+    grid-template-columns: repeat(auto-fill, minmax(50px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    grid-auto-rows: auto !important;
+    grid-auto-columns: auto !important;
+    grid-gap: 1vw;
+    margin: 0 0 5em;
+  }
 
-	.grid-item {
-		min-height: 250px;
-		grid-area: auto !important;
-	}
+  .grid-item {
+    min-height: 250px;
+    grid-area: auto !important;
+  }
 
-	.grid-item br {
-		content: '';
-		display: none;
-	}
+  .grid-item br {
+    content: '';
+    display: none;
+  }
 
-	.grid-item--name,
-	.grid-item--title,
-	.grid-item--text {
-		grid-column: 1 / -1 !important;
-		justify-content: flex-start;
-		min-height: 0;
-		padding: 1vh 0;
-		text-align: left !important;
-	}
+  .grid-item--name,
+  .grid-item--title,
+  .grid-item--text {
+    grid-column: 1 / -1 !important;
+    justify-content: flex-start;
+    min-height: 0;
+    padding: 1vh 0;
+    text-align: left !important;
+  }
 
-	.grid-item--name {
-		grid-row: 1 / -1 !important;
-	}
+  .grid-item--name {
+    grid-row: 1 / -1 !important;
+  }
 
-	.grid .grid-item--title {
-		-webkit-writing-mode: horizontal-tb;
-		writing-mode: horizontal-tb;
-	}
+  .grid .grid-item--title {
+    -webkit-writing-mode: horizontal-tb;
+    writing-mode: horizontal-tb;
+  }
 }
