--- a/src/styles/grid.css
+++ b/src/styles/grid.css
@@ -255,6 +255,15 @@
 }
 .grid .grid-item--nav-prev {
   grid-area: 9 / 5 / 14 / 10;
+  background-image: url(../img/crew.gif);
+  background-color: black;
+  background-size: cover;
+  background-repeat: no-repeat;
+  /* background-position: center calc(50% + 30px); */
+  background-position: center center;
+}
+.grid .grid-item--nav-prev .grid__link {
+  text-shadow: 0px 0px 10px #333;
 }
 .grid .grid-item--nav-next {
   grid-area: 20 / 24 / 25 / 30;
