--- a/src/styles/modal.css
+++ b/src/styles/modal.css
@@ -56,6 +56,7 @@
   left: 20px;
   z-index: 3;
   left: 20px;
+  text-shadow: 0px 0px 10px #333;
 }
 
 .modal.active .modal-content .modal-banner .banner-title {
